Reuse add opens from root